添加上传照片，但是仍无法根据照片生成Q版
